# pokedex

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  Dockerignore  README.md  docker-compose.yml  nginx.conf
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml
src/: config.rs  constants.rs  main.rs  metrics.rs
src/http/: client.rs
src/pokemon_api/: client.rs
src/translator/: client.rs
