[package]
name    = "pokemon-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
anyhow = "1"
async-trait = "0.1"
fmt = "0.1.0"
thiserror = "2"
regex = "1.12.2"
once_cell = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }
utoipa-axum = "0.2"

[dev-dependencies]
jsonschema = "0.37"
tokio-test = "0.4"
serde_json = "1"
tower      = "0.5"
hyper      = "1"
mockito    = "1"
