[package]
name    = "pokemon-rest-api"
version = "0.1.1"
edition = "2021"

[dependencies]
accept-language = "3"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
regex = "1.12.2"
once_cell = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }
utoipa-axum = "0.2"
hyper = "1"
urlencoding = "2.1.3"
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1"
prometheus = "0.14"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
jsonschema = "0.37"
tokio-test = "0.4"
tower      = "0.5"
hyper      = "1"
mockito    = "1"

[package.metadata.cargo-machete]
ignored = ["serde_json", "urlencoding", "tower-http"]
